--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -9,7 +9,7 @@
 - id: buy_now
   translation: Buy Now
 - id: address_title
-  translation: Stop By For A visit
+  translation: Email or Follow us on Social Media!
 - id: submit
   translation: Send Message
 - id: all
